# rdma-core

./: CMakeLists.txt
buildlib/: config.h.in
debian/: control
ib2roce/: CMakeLists.txt  CMakeLists.txt-MSTFLINT  CMakeLists.txt-NO_MSTFLINT  bcom.c  bcom.rs  beacon.c  beacon.h  buffers.c  buffers.h  channel.c  channel.h  cli.c  cli.h  cma-hdr.h  design.txt  endpoint.c  endpoint.h  fifo.h  hash.c  hash.h  ib2roce.alt  ib2roce.c  ib2roce.cfg  ib2roce.service.in  ib2roce.socket  interfaces.c  interfaces.c.rej  interfaces.h  locking.c  locking.h  logging.c  logging.h  multicast.c  multicast.h  pgm-defs.h  pgm.c  pgm.h  ring.c  ring.h  sched.c  (+5 more)
ib2roce/man/: bcom.1  ib2roce.1  ib2roce.7  mclisten.1  mcsender.1
redhat/: build_from_git  rdma-core.spec
